# StarAlignment

./: CMakeLists.txt  README.md  code.txt
include/: Aligner.h  FastaReader.h  ScoreMatrix.h  Sequence.h  StarAlignment.h
src/: Aligner.cpp  FastaReader.cpp  ScoreMatrix.cpp  Sequence.cpp  StarAlignment.cpp  main.cpp
tests/: TestAligner.cpp  TestFasta.cpp  TestScoreMatrix.cpp  TestSequence.cpp  salida.txt
